--- a/src_v2/Detrav.Launcher.Server/Areas/Admin/Pages/Index.cshtml
+++ b/src_v2/Detrav.Launcher.Server/Areas/Admin/Pages/Index.cshtml
@@ -19,3 +19,5 @@
 <p><a asp-page="Products/List">Products</a></p>
 <p><a asp-page="Tags/List">Tags</a></p>
 <p><a asp-page="Achievements/List">Achievements</a></p>
+<p><a asp-page="Screenshots/List">Screenshots</a></p>
+<p><a asp-page="Versions/List">Versions</a></p>
