--- a/src_v2/Detrav.Launcher.Server/Areas/Admin/Pages/Products/List.cshtml
+++ b/src_v2/Detrav.Launcher.Server/Areas/Admin/Pages/Products/List.cshtml
@@ -41,7 +41,7 @@ else
                 <tr>
                     <th scope="row">@product.Id</th>
                     <td>@product.Name</td>
-                    <td>@StringUtils.TrimOneLine(product.Description)</td>
+                    <td>@AppUtils.TrimOneLine(product.Description)</td>
                     <td>
                         <a type="button" class="btn btn-primary" asp-page="Edit" asp-route-id="@product.Id">Edit</a>
                         <a type="button" class="btn btn-danger" asp-page="Delete" asp-route-id="@product.Id">Delete</a>
